2008-10-07  Atsushi Enomoto  <atsushi@ximian.com>

	* TestFixtureBase.cs : until I sort out what's causing failure on
	  channels shutdown, disable concurrent channels here. They block
	  unit testing themselves.

2008-04-16  Atsushi Enomoto  <atsushi@ximian.com>

	* TestFixtureBase.cs : Fix build.

	(ChangeLog was missing in the previous build)

2008-04-06  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* added 
	FeatureBased/Features.Serialization/KnownTypeTest.cs
	FeatureBased/Features.Client/KnownTypeTesterProxy.cs
	FeatureBased/Features.Contracts/KnownTypeTester.cs

2006-04-03  Roei Erez  <roeie@ximian.com>
	* TextFixtureBase.cs