@@ -1,3 +1,8 @@
+2010-01-06  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* TestFixtureBase.cs : try to fix this mannerless set of tests that
+	  leaves comm objects open.
+
 2008-10-07  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* TestFixtureBase.cs : until I sort out what's causing failure on
